--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
   background: #fffffc;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 h1 {
   font-size: 2em;
 }
@@ -25,18 +29,23 @@ nav ul {
 
 nav li {
   flex-shrink: 0;
-  padding: 0 30px 0 30px;
   font-size: 1.3em;
   color: rgb(165, 165, 165);
 }
 
-nav li:hover {
+nav li a {
+  padding: 0 30px 0 30px;
+  color: rgb(165, 165, 165);
+  text-decoration: none;
+}
+
+nav li a:hover {
   color: black;
 }
 
 li.aboutmenav:hover,
 li.skills:hover,
-li.projects:hover {
+li.portfolio:hover {
   border-bottom-style: solid;
   cursor: pointer;
 }
@@ -179,7 +188,7 @@ nav li:nth-child(1):hover {
 @media screen and (max-width: 760px) {
   .aboutmenav,
   .skills,
-  .projects {
+  .portfolio {
     display: none;
   }
   nav ul {
