Navbar padding fix and text-decoration color fix
The Navbar is now fully updated to feature links on desktop.

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ li.aboutmenav:hover,
 li.skills:hover,
 li.portfolio:hover {
   border-bottom-style: solid;
+  border-color: black;
   cursor: pointer;
 }
 
