--- a/style.css
+++ b/style.css
@@ -27,32 +27,44 @@ nav ul {
   align-items: baseline;
 }
 
-nav li {
+nav ul li {
   flex-shrink: 0;
   font-size: 1.3em;
   color: rgb(165, 165, 165);
 }
 
-nav li a {
+nav ul li a {
   padding: 0 30px 0 30px;
   color: rgb(165, 165, 165);
   text-decoration: none;
 }
 
-nav li a:hover {
+nav ul li a:hover {
   color: black;
 }
 
-li.aboutmenav:hover,
-li.skills:hover,
-li.portfolio:hover {
+nav span.hamburger {
+  display: none;
+  height: 89px;
+  left: 20px;
+  position: absolute;
+  align-items: center;
+}
+
+nav span.hamburger img {
+  height: 30px;
+}
+
+nav ul li.aboutmenav:hover,
+nav ul li.skills:hover,
+nav ul li.portfolio:hover {
   border-bottom-style: solid;
   border-color: black;
   cursor: pointer;
 }
 
-nav li:nth-child(1) {
-  padding: 0 30px 5px 25px;
+nav ul li:nth-child(1) {
+  padding: 0 30px 5px 30px;
   margin-right: auto;
   font-family: "Pacifico", cursive;
   font-size: 3em;
@@ -70,7 +82,7 @@ nav li:nth-child(1) {
   color: transparent;
 }
 
-nav li:nth-child(1):hover {
+nav ul li:nth-child(1):hover {
   background: -webkit-linear-gradient(
     335deg,
     rgba(255, 173, 173, 1) 0%,
@@ -192,11 +204,17 @@ nav li:nth-child(1):hover {
   .portfolio {
     display: none;
   }
+
   nav ul {
     justify-content: center;
   }
-  nav li:nth-child(1) {
+
+  nav ul li:nth-child(1) {
     margin-right: 0;
+  }
+
+  nav span.hamburger {
+    display: flex;
   }
 
   .picture > img {
