--- a/style.css
+++ b/style.css
@@ -211,10 +211,12 @@ nav ul li:nth-child(1):hover {
 
   nav ul li:nth-child(1) {
     margin-right: 0;
+    font-size: 2em;
   }
 
   nav span.hamburger {
     display: flex;
+    height: 61px;
   }
 
   .picture > img {
