--- a/style.css
+++ b/style.css
@@ -11,7 +11,21 @@ body {
 
 html {
   scroll-behavior: smooth;
+  /* font-size: 16px; */
 }
+
+/* Set initial pixel sizes and use relative units (rem and em) in the rest of the CSS */
+/* @media screen and (min-width: 900px) {
+  html {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  html {
+    font-size: 20px;
+  }
+} */
 
 h1 {
   font-size: 2em;
